syntax = "proto3";

package caraml.upi.v1;

import "caraml/upi/v1/value.proto";
import "google/protobuf/timestamp.proto";
import "google/api/annotations.proto";

// Service for performing model prediction
service UniversalPredictionService {
  rpc PredictValues(PredictValuesRequest)
    returns (PredictValuesResponse) {
     option (google.api.http) = {
                post : "/v1/predict"
                body : "*"
    };
  }
}

// Represents a request to predict multiple values
message PredictValuesRequest {
  // Collection of prediction instances to be predicted.
  // Each prediction row correspond to one prediction instance.
  // NOTE: the ordering of prediction_rows might differ with prediction_result_rows in the response
  repeated PredictionRow prediction_rows = 1;

  // Name of the concept we wish to predict.
  // For example in context of iris classification problem it can be "iris-species"
  string target_name = 2;

  // Prediction context may contain additional data applicable to all prediction instances
  // For example it can be used to store information for traffic rules, experimentation
  // or tracking purposes.
  // Eg. country_code, service_type, service_area_id 
  repeated NamedValue prediction_context = 3;

  RequestMetadata metadata = 10;
}

message RequestMetadata {

  // Unique identifier for each request. Optional.
  // Prediction ID will generated by the platform. The user is expected
  // include the prediction ID (along with row ID) when calling
  // the observations API so that predictions and observations can be joined.
  // Prediction ID is needed because row ID may not be globally unique
  // across requests (only locally unique within each request).
  // If there are experiments with alternative models, the mapping
  // from prediciton ID to treatment ID will be logged by the platform
  string prediction_id = 1;

  // Timestamp of the request
  google.protobuf.Timestamp request_timestamp = 2;
}

// Represents an single instance we wish to predict.
// Eg. for Matchmaking a prediction row will typically
// correspond to a proposed driver plan
message PredictionRow {
  // Row ID is defined by the client and can be used
  // to join a prediction row with the prediction result,
  // and to track predictions generated by multiple models.
  // The user is expected include row ID (along with prediction ID)
  // when calling the observations API so that predictions
  // and observations can be joined. 
  string row_id = 1;
 
  // Model inputs contain all preprocessed feature that model use to perform prediction.
  // The feature ordering in model_inputs must be the same as feature order expected by model. 
  // Model inputs can be populated via 3 ways:
  // - By performing preprocessing in the client-side and sent as part of original request.
  // - By transforming raw feature values stored in transformer_inputs.
  // - By retrieving precomputed feature value from feature store.  
  repeated NamedValue model_inputs = 2;
 
  // Transformer input contains raw values that can be used to enrich model_inputs using transformer.
  // Typically transformer_inputs contains:
  // - unprocessed/raw features that requires further processing. 
  // - list of entities for which their precomputed features are retrieved from feature store.
  // 
  repeated NamedValue transformer_inputs = 3;
}

message PredictValuesResponse {
  // Prediction results corresponding to the
  // prediction rows provided in the request. 
  // NOTE: the ordering of prediction_result_rows might differ with prediction_rows in the request
  repeated PredictionResultRow prediction_result_rows = 1;

  // Target name as defined in the request metadata
  string target_name = 2;

  // Extensible field to cover unforeseen requirements
  repeated NamedValue prediction_context = 3;

  // Response metadata
  ResponseMetadata metadata = 10;
}

message PredictionResultRow {
  // Row ID defined by the caller used to join a prediction result with a prediction row
  string row_id = 1;

  // Represents the predicted values corresponding to a 
  // single prediction row. This will often be the output of an ML model.
  // This field is repeated to support multi-task models with non-scalar outputs
  repeated NamedValue values = 2;
}

message ResponseMetadata {
  // Prediction ID generated by the platform. 
  // The user is expected include the prediction ID (along with row ID) when calling
  // the observations API so that predictions and observations can be joined.
  // Prediction ID is needed because row ID may not be globally unique
  // across requests (only locally unique within each request).
  // If there are experiments with alternative models, the mapping
  // from prediciton ID to treatment ID will be logged by the platform
  string prediction_id = 1;

  // List of model that produces the prediction 
  // This field is repeated to cater for use case such as ensembling several model production results
  repeated ModelMetadata models = 2;

  // Optional experimentation metadata
  string experiment_id = 3;
  string treatment_id = 4;
}

message ModelMetadata {
  // Model name that produce prediction
  string name = 1;
  // Model version that produce prediction
  string version = 2;
} 
